<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/custom_bg_dialog"
    android:padding="16dp">

    <TextView
        android:id="@+id/txv_prod_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@tools:sample/lorem/random" />

    <EditText
        android:id="@+id/edt_amount_item"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:hint="@string/str_amount"
        android:maxLength="3"
        app:layout_constraintEnd_toStartOf="@id/spn_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txv_prod_name"
        android:autofillHints="no"
        android:inputType="number">
    </EditText>

    <Spinner
        android:id="@+id/spn_type"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:drawSelectorOnTop="true"
        android:entries="@array/types"
        app:layout_constraintBottom_toBottomOf="@id/edt_amount_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edt_amount_item"
        app:layout_constraintTop_toTopOf="@id/edt_amount_item" />

    <EditText
        android:id="@+id/edt_description"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:padding="5dp"
        android:hint="@string/str_description"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@id/btn_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_amount_item"
        android:autofillHints="no"
        android:inputType="text">
    </EditText>

    <Button
        android:id="@+id/btn_save"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/str_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_description" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/str_cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintBottom_toBottomOf="@id/btn_save"
        app:layout_constraintEnd_toStartOf="@id/btn_save"
        app:layout_constraintTop_toTopOf="@id/btn_save" />

</androidx.constraintlayout.widget.ConstraintLayout>