<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    style="@style/custom_bg_dialog">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_prod_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/str_product_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_name_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spn_categories"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:entries="@array/categories"
        app:layout_constraintStart_toStartOf="@id/til_prod_name"
        app:layout_constraintEnd_toEndOf="@id/til_prod_name"
        app:layout_constraintTop_toBottomOf="@id/til_prod_name"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/str_save"
        app:layout_constraintTop_toBottomOf="@id/spn_categories"
        app:layout_constraintEnd_toEndOf="@id/til_prod_name"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/str_cancel"
        app:layout_constraintTop_toTopOf="@id/btn_save"
        app:layout_constraintEnd_toStartOf="@id/btn_save"
        app:layout_constraintBottom_toBottomOf="@id/btn_save"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>