<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presenter.buyShopListView.FragmentBuyShopList">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_buy_products"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/recycle_buy_shop_list"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/const_layout_bottom"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <LinearLayout
        android:id="@+id/linear_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <ImageView
            android:id="@+id/img_no_items"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/add_items"
            android:alpha="0.5"
            android:contentDescription="@string/str_image_no_items" />

        <TextView
            android:id="@+id/txv_empty_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_empty_list"
            android:textSize="32sp"
            android:textColor="@android:color/darker_gray"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/buy_act_bottom_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <TextView
            android:id="@+id/txv_partial_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/str_partial"
            style="@style/customTextView"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintEnd_toStartOf="@id/txv_partial_value"
            app:layout_constraintTop_toTopOf="@id/txv_partial_value"
            app:layout_constraintBottom_toBottomOf="@id/txv_partial_value"/>

        <TextView
            android:id="@+id/txv_partial_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            style="@style/customTextView"
            tools:text="10.000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ProgressBar
            android:id="@+id/prb_amount_items"
            android:layout_width="0dp"
            android:layout_height="3dp"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>